<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.resetPassword.ResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/img_reset_password"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyleTitle"
                android:layout_gravity="center"
                android:text="@string/reset_password"
                android:layout_marginBottom="40dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextInputLayout"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_pwd_edittext"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:maxLength="4"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black_effective"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextInputLayout"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_pwd_edittext"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLength="4"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black_effective"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextInputLayout"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_pwd_edittext"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="4"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black_effective"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/update"
                android:layout_marginTop="40dp"
                android:theme="@style/OrangeFlatButton"/>

        </LinearLayout>

    </RelativeLayout>
</layout>