<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".ui.securityQuestion.SecurityQuestionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:src="@drawable/img_security_question" />

            <TextView
                style="@style/TextStyleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:text="@string/security_question" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_edittext"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="@string/question"
                    android:inputType="text"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black_effective" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout"
                app:hintTextAppearance="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/answer_edittext"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center_vertical"
                    android:hint="@string/answer"
                    android:inputType="text"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black_effective" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/empty_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:theme="@style/TextInputLayout"
                android:visibility="invisible"
                app:hintTextAppearance="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/input_border_bottom"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/send_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:stateListAnimator="@null"
                android:text="@string/save"
                android:theme="@style/OrangeFlatButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:text="@string/skip"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_skip" />
        </LinearLayout>

    </RelativeLayout>
</layout>