<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.securityQuestion.SecurityQuestionSettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:layout_alignParentTop="true"
            layout="@layout/view_toolbar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:src="@drawable/img_security_question" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/TextInputLayout"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/question_edittext"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/input_border_bottom"
                        android:cursorVisible="true"
                        android:gravity="center_vertical"
                        android:hint="@string/question"
                        android:inputType="text"
                        android:enabled="false"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black_effective" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/TextInputLayout"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/answer_edittext"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/input_border_bottom"
                        android:cursorVisible="true"
                        android:gravity="center_vertical"
                        android:hint="@string/answer"
                        android:inputType="text"
                        android:enabled="false"
                        android:paddingBottom="5dp"
                        android:textColor="@color/black_effective" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/empty_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/TextInputLayout"
                    android:visibility="invisible"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/input_border_bottom"
                        android:gravity="center_vertical"
                        android:paddingBottom="5dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/send_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="40dp"
                    android:stateListAnimator="@null"
                    android:text="@string/save"
                    android:theme="@style/OrangeFlatButton" />

                <LinearLayout
                    android:id="@+id/edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/edit_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stateListAnimator="@null"
                        android:text="@string/update"
                        android:theme="@style/OrangeFlatButtonBlue" />

                    <Button
                        android:id="@+id/delete_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stateListAnimator="@null"
                        android:text="@string/delete"
                        android:theme="@style/OrangeFlatButtonRed" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>